2020-07-22 19:42:00 Alessandro De Salvo
	* Add python3 to centos7

2018-06-05 11:57:00 Alessandro De Salvo
	* Add iproute to centos7

2018-05-28 18:16:00 Alessandro De Salvo
	* Add glibc-devel.i686 to centos7

2018-03-23 17:55:00 Alessandro De Salvo
	* Remove stripping of locale

2018-02-27 00:22:00 Alessandro De Salvo
	* Fix for dbus machine-id

2018-02-22 09:00:00 Alessandro De Salvo
	* New maintainer label style

2018-02-21 20:47:00 Alessandro De Salvo
	* Remove HEP OSLibs dependenciess

2018-02-21 19:42:00 Alessandro De Salvo
	* Improved timestamp mechanism

2018-02-21 14:18:00 Alessandro De Salvo
	* Refactoring the images to build from the minimal sources

2018-02-20 17:25:00 Alessandro De Salvo
	* Add new base minimal images

2018-02-15 11:25:00 Alessandro De Salvo
	* Fixed new HEP OS Libs

2018-02-09 16:48:00 Alessandro De Salvo
	* Updated HEP OS Libs