@@ -1,3 +1,6 @@
+2021-11-23 15:59:00 Alessandro De Salvo
+	* Add centos 8s and aarch64 builds
+
 2020-07-22 19:42:00 Alessandro De Salvo
 	* Add python3 to centos7
 
